# mdbook-yapp

./: Cargo.toml  README.md  Taskfile.yml  mdbook-yapp
.github/workflows/: build-linux-aarch64.yml  build-linux-gnu.yml  build-linux-musl.yml  build-macos-aarch64.yml  build-macos-arm64.yml  build-macos.yml  build-windows.yml
docs/: README.md
src/: main.rs
