[package]
name = "mdbook-yapp"
version = "2.0.1"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "mdBook preprocessor for simple text replacements"
documentation = "https://docs.rs/mdbook-yapp"
repository = "https://github.com/EngosSoftware/mdbook-yapp.git"
keywords = ["mdBook", "preprocessor", "replace", "text", "pattern"]
categories = ["template-engine", "text-processing"]
license = "MIT OR Apache-2.0"
edition = "2024"
exclude = [
    "rustfmt.toml",
    "Taskfile.yml",
    ".github/",
    ".gitignore",
    "CODE_OF_CONDUCT.md"
]

[dependencies]
clap = "4.6.0"
kivi = "1.2.2"
mdbook-preprocessor = "0.5.2"
semver = "1.0.27"
serde_json = "1.0.149"
